Fixed z-index and alignment issues on mobile

--- a/app/src/css/app.css
+++ b/app/src/css/app.css
@@ -1027,6 +1027,9 @@ textarea.small {
 		padding-top: 0;
     	padding-bottom: 0.5em;
 	}
+	h2.title {
+		display: block;
+	}
 	body.light {
 		background-image: none !important;
 	}
@@ -1236,7 +1239,8 @@ aside.creation nav a span {
         width: 100%;
 		padding-top: 16px !important;
 		margin-top: 0px !important;
-		z-index: 999999999;
+		position: fixed!important;
+		z-index: 999999;
     }
     section.launcher {
         max-width: 320px;
